--- a/central-js/package.json
+++ b/central-js/package.json
@@ -26,16 +26,13 @@
     "passport": "~0.2.0",
     "passport-oauth2": "1.1.2",
     "errorhandler": "~1.0.0",
-    "compression": "~1.0.1",
-    "js-yaml": "~3.3.1",
-    "whet.extend": "~0.9.9",
-    "sax": "~1.1.1"
+    "compression": "~1.0.1"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.4",
     "grunt-autoprefixer": "~0.7.2",
     "grunt-wiredep": "~1.8.0",
-    "grunt-concurrent": "1.0.0",
+    "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -45,14 +42,14 @@
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-google-cdn": "~0.4.0",
+    "grunt-google-cdn": "0.4.3",
     "grunt-newer": "~0.7.0",
     "grunt-ng-annotate": "^0.2.3",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "~2.1.1",
     "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "0.2.0",
+    "grunt-node-inspector": "~0.1.5",
     "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
@@ -74,7 +71,7 @@
     "karma-script-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-jasmine": "~0.1.5",
+    "karma-jasmine": "~0.2.0",
     "karma-chrome-launcher": "~0.1.3",
     "requirejs": "~2.1.11",
     "karma-requirejs": "~0.2.1",
@@ -84,7 +81,10 @@
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "should": "~3.3.1",
+    "js-yaml": "~3.3.1",
+    "whet.extend": "~0.9.9",
+    "sax": "~1.1.1"
   },
   "engines": {
     "node": ">=0.10.0"
