--- a/central-js/package.json
+++ b/central-js/package.json
@@ -88,7 +88,7 @@
     "grunt-mout": "~1.0.1"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "0.10.25"
   },
   "scripts": {
     "start": "node server/app.js",
