--- a/central-js/package.json
+++ b/central-js/package.json
@@ -84,13 +84,13 @@
     "should": "~3.3.1",
     "js-yaml": "~3.3.1",
     "whet.extend": "~0.9.9",
-    "sax": "~1.1.1",
     "grunt-mout": "~1.0.1",
+    "sax": "~1.1.1",
     "grunt-node-version": "1.0.0",
     "mout": "0.11.0"
   },
   "engines": {
-    "node": "0.10.25"
+    "node": ">=0.10.25"
   },
   "scripts": {
     "start": "node server/app.js",
