--- a/central-js/package.json
+++ b/central-js/package.json
@@ -88,7 +88,8 @@
     "sax": "~1.1.1",
     "grunt-node-version": "1.0.0",
     "mout": "0.11.0",
-    "wordwrap": "0.0.3"
+    "wordwrap": "0.0.3",
+    "concat-map":"0.0.1"
   },
   "engines": {
     "node": ">=0.10.25"
