--- a/central-js/package.json
+++ b/central-js/package.json
@@ -90,7 +90,11 @@
     "mout": "0.11.0",
     "wordwrap": "0.0.3",
     "concat-map":"0.0.1",
-    "balanced-match":"0.2.0"
+    "balanced-match":"0.2.0",
+    "core-util-is":"1.0.1",
+    "inherits":"2.0.1",
+    "isarray":"0.0.1",
+    "string_decoder":"0.10.31"
   },
   "engines": {
     "node": ">=0.10.25"
