--- a/central-js/package.json
+++ b/central-js/package.json
@@ -34,7 +34,7 @@
     "grunt-wiredep": "~1.8.0",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
     "grunt-contrib-htmlmin": "~0.2.0",
