--- a/central-js/package.json
+++ b/central-js/package.json
@@ -44,7 +44,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-google-cdn": "0.4.3",
     "grunt-newer": "~0.7.0",
-    "grunt-ng-annotate": "^0.2.3",
+    "grunt-ng-annotate": "1.0.1",
     "grunt-rev": "~0.1.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "3.0.0",
