--- a/central-js/package.json
+++ b/central-js/package.json
@@ -40,7 +40,7 @@
     "grunt-contrib-htmlmin": "~0.2.0",
     "grunt-contrib-imagemin": "~0.7.1",
     "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-uglify": "0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-google-cdn": "0.4.2",
     "grunt-newer": "~0.7.0",
