--- a/central-js/package.json
+++ b/central-js/package.json
@@ -49,7 +49,7 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-usemin": "3.0.0",
     "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.5",
+    "grunt-node-inspector": "0.2.0",
     "grunt-nodemon": "~0.2.0",
     "grunt-angular-templates": "^0.5.4",
     "grunt-dom-munger": "^3.4.0",
