--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -308,7 +308,13 @@
             <groupId>org.opensymphony.quartz</groupId>
             <artifactId>quartz</artifactId>
         </dependency>
-
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>		
+		
         <!-- Running example processes -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
