--- a/central-js/bower.json
+++ b/central-js/bower.json
@@ -21,8 +21,7 @@
     "jquery.cookie": "~1.4.1",
     "ng-clip": "~0.2.6",
     "zeroclipboard": "~2.2.0",
-    "angular-ui-utils": "~0.2.3",
-    "intl-tel-input" : "~6.0.4"
+    "angular-ui-utils": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
