--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -116,11 +116,11 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<configuration>
-					<port>8080</port>
+					<port>8081</port>
 					<path>/wf-region</path>
 					<systemProperties>
 						<com.sun.management.jmxremote.port>4000</com.sun.management.jmxremote.port>
-						<spring.profiles.active>test</spring.profiles.active>
+						<spring.profiles.active>local</spring.profiles.active>
 					</systemProperties>
 				</configuration>
 			</plugin>
