--- a/wf-base/pom.xml
+++ b/wf-base/pom.xml
@@ -109,6 +109,17 @@
                     </systemProperties>
                 </configuration>
             </plugin>
+            <plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-jar-plugin</artifactId>
+        		<executions>
+          			<execution>
+            			<goals>
+              				<goal>test-jar</goal>
+            			</goals>
+          			</execution>
+        		</executions>
+      		</plugin>
         </plugins>
         <pluginManagement>
             <plugins>
