--- a/wf-region/pom.xml
+++ b/wf-region/pom.xml
@@ -260,6 +260,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>wf-base</artifactId>
             <version>${igov.wf-base.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>wf-base</artifactId>
+            <version>${igov.wf-base.version}</version>
             <classifier>ui-zip</classifier>
             <type>zip</type>
             <scope>provided</scope>
